US1271: Ensure only Secure Sockets Layer (SSL) communication for cookies.

--- a/src/SFA.Apprenticeships.Web.Candidate/Web.config
+++ b/src/SFA.Apprenticeships.Web.Candidate/Web.config
@@ -27,7 +27,7 @@
     </authentication>
     <machineKey configSource="Configs\machineKey.config" />
     <sessionState mode="Off" />
-    <httpCookies httpOnlyCookies="true" requireSSL="false" />
+    <httpCookies httpOnlyCookies="true" requireSSL="true" />
     <caching>
       <outputCache />
       <outputCacheSettings>
