--- a/src/SFA.Apprenticeships.Web.Manage/Web.config
+++ b/src/SFA.Apprenticeships.Web.Manage/Web.config
@@ -20,7 +20,7 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.1" />
     <httpRuntime targetFramework="4.5.1" />
-    <httpCookies httpOnlyCookies="true" requireSSL="false" />
+    <httpCookies httpOnlyCookies="true" requireSSL="true" />
     <caching>
       <outputCache />
       <outputCacheSettings>
