--- a/src/SFA.Apprenticeships.Web.Manage/Web.config
+++ b/src/SFA.Apprenticeships.Web.Manage/Web.config
@@ -63,7 +63,7 @@
         <!--Securing against "Click Jacking" http://stackoverflow.com/questions/20047086/securing-my-asp-net-mvc3-website-aganist-click-jacking-->
         <add name="x-frame-options" value="SAMEORIGIN" />
         <!--HSTS header for GDS https://www.gov.uk/service-manual/operations/operating-servicegovuk-subdomains#transport-layer-security-->
-        <add name="Strict-Transport-Security" value="max-age=31536000, includeSubDomains;" />
+        <add name="Strict-Transport-Security" value="max-age=31536000;includeSubDomains;preload" />
       </customHeaders>
     </httpProtocol>
     <httpErrors errorMode="Detailed" existingResponse="Replace">
