--- a/src/SFA.Apprenticeships.Web.Recruit/Web.config
+++ b/src/SFA.Apprenticeships.Web.Recruit/Web.config
@@ -19,7 +19,7 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.1" />
-    <httpRuntime targetFramework="4.5.1" />
+    <httpRuntime targetFramework="4.5.1" enableVersionHeader="false"/>
     <httpCookies httpOnlyCookies="true" requireSSL="true" />
     <caching>
       <outputCache />
@@ -127,10 +127,12 @@
         <remove name="X-Powered-By" />
         <remove name="X-AspNetMvc-Version" />
         <add name="Cache-Control" value="public" />
-        <!--Securing against "Click Jacking" http://stackoverflow.com/questions/20047086/securing-my-asp-net-mvc3-website-aganist-click-jacking-->
-        <add name="x-frame-options" value="SAMEORIGIN" />
+        <!--Securing against "Click Jacking" http://stackoverflow.com/questions/20047086/securing-my-asp-net-mvc3-website-aganist-click-jacking-->        
         <!--HSTS header for GDS https://www.gov.uk/service-manual/operations/operating-servicegovuk-subdomains#transport-layer-security-->
         <add name="Strict-Transport-Security" value="max-age=31536000;includeSubDomains;preload" />
+        <add name="X-Frame-Options" value="DENY"/>
+        <add name="X-XSS-Protection" value="1; mode=block"/>
+        <add name="X-Content-Type-Options" value="nosniff "/>        
       </customHeaders>
     </httpProtocol>
     <httpErrors errorMode="Detailed" existingResponse="Replace">
