--- a/src/SFA.Apprenticeships.Web.Candidate/Web.Pre.config
+++ b/src/SFA.Apprenticeships.Web.Candidate/Web.Pre.config
@@ -82,6 +82,7 @@
             <property name="currentculture" layout="${mdlc:CurrentCulture}" />
             <property name="currentuiculture" layout="${mdlc:CurrentUICulture}" />
             <property name="headers" layout="${mdlc:Headers}" />
+            <property name="requestGuid" layout="${mdlc:requestGuid}" />
           </layout>
         </target>
       </target>
@@ -110,6 +111,7 @@
           <property name="currentculture" layout="${mdlc:CurrentCulture}" />
           <property name="currentuiculture" layout="${mdlc:CurrentUICulture}" />
           <property name="headers" layout="${mdlc:Headers}" />
+          <property name="requestGuid" layout="${mdlc:requestGuid}" />
         </layout>
       </target>
     </targets>
