--- a/src/SFA.Apprenticeships.Web.Candidate/Web.Prod.config
+++ b/src/SFA.Apprenticeships.Web.Candidate/Web.Prod.config
@@ -83,6 +83,7 @@
             <property name="currentculture" layout="${mdlc:CurrentCulture}" />
             <property name="currentuiculture" layout="${mdlc:CurrentUICulture}" />
             <property name="headers" layout="${mdlc:Headers}" />
+            <property name="requestGuid" layout="${mdlc:requestGuid}" />
           </layout>
         </target>
       </target>
@@ -111,6 +112,7 @@
           <property name="currentculture" layout="${mdlc:CurrentCulture}" />
           <property name="currentuiculture" layout="${mdlc:CurrentUICulture}" />
           <property name="headers" layout="${mdlc:Headers}" />
+          <property name="requestGuid" layout="${mdlc:requestGuid}" />
         </layout>
       </target>
     </targets>
