--- a/src/SFA.Apprenticeships.Web.Candidate/Web.Sit.config
+++ b/src/SFA.Apprenticeships.Web.Candidate/Web.Sit.config
@@ -81,6 +81,7 @@
             <property name="currentculture" layout="${mdlc:CurrentCulture}" />
             <property name="currentuiculture" layout="${mdlc:CurrentUICulture}" />
             <property name="headers" layout="${mdlc:Headers}" />
+            <property name="requestGuid" layout="${mdlc:requestGuid}" />
           </layout>
         </target>
       </target>
@@ -109,6 +110,7 @@
           <property name="currentculture" layout="${mdlc:CurrentCulture}" />
           <property name="currentuiculture" layout="${mdlc:CurrentUICulture}" />
           <property name="headers" layout="${mdlc:Headers}" />
+          <property name="requestGuid" layout="${mdlc:requestGuid}" />
         </layout>
       </target>
     </targets>
