--- a/src/SFA.Apprenticeships.Web.Recruit/Web.Local.config
+++ b/src/SFA.Apprenticeships.Web.Recruit/Web.Local.config
@@ -28,6 +28,7 @@
           <property name="referrer" layout="${mdlc:UrlReferrer}" />
           <property name="userlanguages" layout="${mdlc:UserLanguages}" />
           <property name="headers" layout="${mdlc:Headers}" />
+          <property name="requestGuid" layout="${mdlc:requestGuid}" />
         </layout>
       </target>
     </targets>
