--- a/src/SFA.Apprenticeships.Web.Candidate/Web.Dev.config
+++ b/src/SFA.Apprenticeships.Web.Candidate/Web.Dev.config
@@ -64,6 +64,7 @@
             <property name="currentculture" layout="${mdlc:CurrentCulture}" />
             <property name="currentuiculture" layout="${mdlc:CurrentUICulture}" />
             <property name="headers" layout="${mdlc:Headers}" />
+            <property name="requestGuid" layout="${mdlc:requestGuid}" />
           </layout>
         </target>
       </target>
@@ -92,6 +93,7 @@
           <property name="currentculture" layout="${mdlc:CurrentCulture}" />
           <property name="currentuiculture" layout="${mdlc:CurrentUICulture}" />
           <property name="headers" layout="${mdlc:Headers}" />
+          <property name="requestGuid" layout="${mdlc:requestGuid}" />
         </layout>
       </target>
     </targets>
