--- a/src/SFA.Apprenticeships.Web.Candidate/Web.config
+++ b/src/SFA.Apprenticeships.Web.Candidate/Web.config
@@ -247,7 +247,7 @@
     <variable name="environment" value="Local" />
     <targets async="true">
       <target xsi:type="File" name="flatfilelogger" fileName="C:\logs\Web.Candidate.log" createDirs="true" keepFileOpen="false" encoding="iso-8859-2">
-        <layout xsi:type="JsonLayout">
+        <layout xsi:type="JsonLayout"> <!-- TODO Use transforms rather than copy and pasting to every config file -->
           <property name="user" layout="${mdlc:userId}" />
           <property name="session" layout="${mdlc:sessionId}" />
           <property name="date" layout="${longdate}" />
@@ -264,6 +264,7 @@
           <property name="referrer" layout="${mdlc:UrlReferrer}" />
           <property name="userlanguages" layout="${mdlc:UserLanguages}" />
           <property name="headers" layout="${mdlc:Headers}" />
+          <property name="requestGuid" layout="${mdlc:requestGuid}" />
         </layout>
       </target>
     </targets>
