--- a/src/SFA.Apprenticeships.Web.Common/packages.config
+++ b/src/SFA.Apprenticeships.Web.Common/packages.config
@@ -16,6 +16,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net451" />
   <package id="NLog" version="4.0.1" targetFramework="net451" />
+  <package id="NLog.Contrib" version="1.0.0.2" targetFramework="net451" />
   <package id="RazorGenerator.Mvc" version="2.3.12" targetFramework="net451" />
   <package id="structuremap" version="3.1.6.186" targetFramework="net451" />
   <package id="structuremap.web" version="3.1.0.133" targetFramework="net451" />
