--- a/src/SFA.Apprenticeships.Web.Manage/Web.Sit.config
+++ b/src/SFA.Apprenticeships.Web.Manage/Web.Sit.config
@@ -51,6 +51,7 @@
           <property name="currentculture" layout="${mdlc:CurrentCulture}" />
           <property name="currentuiculture" layout="${mdlc:CurrentUICulture}" />
           <property name="headers" layout="${mdlc:Headers}" />
+          <property name="requestGuid" layout="${mdlc:requestGuid}" />
         </layout>
       </target>
     </targets>
