--- a/src/SFA.Apprenticeships.Web.Recruit/Web.Pre.config
+++ b/src/SFA.Apprenticeships.Web.Recruit/Web.Pre.config
@@ -55,6 +55,7 @@
           <property name="currentculture" layout="${mdlc:CurrentCulture}" />
           <property name="currentuiculture" layout="${mdlc:CurrentUICulture}" />
           <property name="headers" layout="${mdlc:Headers}" />
+          <property name="requestGuid" layout="${mdlc:requestGuid}" />
         </layout>
       </target>
     </targets>
