IDAMS: use SIT ACS config for PRE (temporary change to support PEN test.

--- a/src/SFA.Apprenticeships.Web.Recruit/Web.Pre.config
+++ b/src/SFA.Apprenticeships.Web.Recruit/Web.Pre.config
@@ -3,7 +3,7 @@
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform" xmlns:nlog="http://www.nlog-project.org/schemas/NLog.xsd">
   <appSettings>
     <add key="Environment" value="PRE" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-    <add key="ida:Wtrealm" value="http://sfa-recruit-pre.cloudapp.net/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="ida:Wtrealm" value="http://sfa-recruit-sit.cloudapp.net/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="ida:SessionTimeout" value="60" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
   </appSettings>
 
