--- a/src/SFA.Apprenticeships.Web.Manage/Web.Pre.config
+++ b/src/SFA.Apprenticeships.Web.Manage/Web.Pre.config
@@ -3,8 +3,7 @@
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform" xmlns:nlog="http://www.nlog-project.org/schemas/NLog.xsd">
   <appSettings>
     <add key="Environment" value="PRE" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-    <add key="ida:MetadataAddress" value="https://nasprodacs.accesscontrol.windows.net/FederationMetadata/2007-06/FederationMetadata.xml" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-    <add key="ida:Wtrealm" value="http://sfa-manage-pre.cloudapp.net/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="ida:Wtrealm" value="http://sfa-manage-sit.cloudapp.net/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="ida:SessionTimeout" value="60" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
   </appSettings>
 
