Pass through headersLogged correctly
This will be set once the headers have been successfully logged for a
request. If present then headers can be filtered out by LogStash.

--- a/src/SFA.Apprenticeships.Web.Manage/Web.Local.config
+++ b/src/SFA.Apprenticeships.Web.Manage/Web.Local.config
@@ -33,6 +33,7 @@
           <property name="userlanguages" layout="${mdlc:UserLanguages}" />
           <property name="headers" layout="${mdlc:Headers}" />
           <property name="requestGuid" layout="${mdlc:requestGuid}" />
+          <property name="headersLogged" layout="${mdlc:headersLogged}" />
         </layout>
       </target>
     </targets>
