--- a/src/SFA.Apprenticeships.Web.Candidate/Web.Demo.config
+++ b/src/SFA.Apprenticeships.Web.Candidate/Web.Demo.config
@@ -65,6 +65,7 @@
             <property name="currentuiculture" layout="${mdlc:CurrentUICulture}" />
             <property name="headers" layout="${mdlc:Headers}" />
             <property name="requestGuid" layout="${mdlc:requestGuid}" />
+            <property name="headersLogged" layout="${mdlc:headersLogged}" />
           </layout>
         </target>
       </target>
@@ -94,6 +95,7 @@
           <property name="currentuiculture" layout="${mdlc:CurrentUICulture}" />
           <property name="headers" layout="${mdlc:Headers}" />
           <property name="requestGuid" layout="${mdlc:requestGuid}" />
+          <property name="headersLogged" layout="${mdlc:headersLogged}" />
         </layout>
       </target>
     </targets>
