--- a/src/SFA.Apprenticeships.Web.Candidate/Web.Pre.config
+++ b/src/SFA.Apprenticeships.Web.Candidate/Web.Pre.config
@@ -83,6 +83,7 @@
             <property name="currentuiculture" layout="${mdlc:CurrentUICulture}" />
             <property name="headers" layout="${mdlc:Headers}" />
             <property name="requestGuid" layout="${mdlc:requestGuid}" />
+            <property name="headersLogged" layout="${mdlc:headersLogged}" />
           </layout>
         </target>
       </target>
@@ -112,6 +113,7 @@
           <property name="currentuiculture" layout="${mdlc:CurrentUICulture}" />
           <property name="headers" layout="${mdlc:Headers}" />
           <property name="requestGuid" layout="${mdlc:requestGuid}" />
+          <property name="headersLogged" layout="${mdlc:headersLogged}" />
         </layout>
       </target>
     </targets>
