--- a/src/SFA.Apprenticeships.Web.Candidate/Web.Prod.config
+++ b/src/SFA.Apprenticeships.Web.Candidate/Web.Prod.config
@@ -84,6 +84,7 @@
             <property name="currentuiculture" layout="${mdlc:CurrentUICulture}" />
             <property name="headers" layout="${mdlc:Headers}" />
             <property name="requestGuid" layout="${mdlc:requestGuid}" />
+            <property name="headersLogged" layout="${mdlc:headersLogged}" />
           </layout>
         </target>
       </target>
@@ -113,6 +114,7 @@
           <property name="currentuiculture" layout="${mdlc:CurrentUICulture}" />
           <property name="headers" layout="${mdlc:Headers}" />
           <property name="requestGuid" layout="${mdlc:requestGuid}" />
+          <property name="headersLogged" layout="${mdlc:headersLogged}" />
         </layout>
       </target>
     </targets>
