--- a/src/SFA.Apprenticeships.Web.Candidate/Web.Sit.config
+++ b/src/SFA.Apprenticeships.Web.Candidate/Web.Sit.config
@@ -82,6 +82,7 @@
             <property name="currentuiculture" layout="${mdlc:CurrentUICulture}" />
             <property name="headers" layout="${mdlc:Headers}" />
             <property name="requestGuid" layout="${mdlc:requestGuid}" />
+            <property name="headersLogged" layout="${mdlc:headersLogged}" />
           </layout>
         </target>
       </target>
@@ -111,6 +112,7 @@
           <property name="currentuiculture" layout="${mdlc:CurrentUICulture}" />
           <property name="headers" layout="${mdlc:Headers}" />
           <property name="requestGuid" layout="${mdlc:requestGuid}" />
+          <property name="headersLogged" layout="${mdlc:headersLogged}" />
         </layout>
       </target>
     </targets>
