--- a/src/SFA.Apprenticeships.Web.Manage/Web.config
+++ b/src/SFA.Apprenticeships.Web.Manage/Web.config
@@ -19,7 +19,7 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.1" />
-    <httpRuntime targetFramework="4.5.1" enableVersionHeader="false"/>
+    <httpRuntime targetFramework="4.5.1" />
     <httpCookies httpOnlyCookies="true" requireSSL="true" />
     <caching>
       <outputCache />
@@ -60,12 +60,10 @@
         <remove name="X-Powered-By" />
         <remove name="X-AspNetMvc-Version" />
         <add name="Cache-Control" value="public" />
-        <!--Securing against "Click Jacking" http://stackoverflow.com/questions/20047086/securing-my-asp-net-mvc3-website-aganist-click-jacking-->        
+        <!--Securing against "Click Jacking" http://stackoverflow.com/questions/20047086/securing-my-asp-net-mvc3-website-aganist-click-jacking-->
+        <add name="x-frame-options" value="SAMEORIGIN" />
         <!--HSTS header for GDS https://www.gov.uk/service-manual/operations/operating-servicegovuk-subdomains#transport-layer-security-->
         <add name="Strict-Transport-Security" value="max-age=31536000;includeSubDomains;preload" />
-        <add name="X-Frame-Options" value="DENY"/>
-        <add name="X-XSS-Protection" value="1; mode=block"/>
-        <add name="X-Content-Type-Options" value="nosniff "/>        
       </customHeaders>
     </httpProtocol>
     <httpErrors errorMode="Detailed" existingResponse="Replace">
@@ -205,6 +203,7 @@
           <property name="userlanguages" layout="${mdlc:UserLanguages}" />
           <property name="headers" layout="${mdlc:Headers}" />
           <property name="requestGuid" layout="${mdlc:requestGuid}" />
+          <property name="headersLogged" layout="${mdlc:headersLogged}" />
         </layout>
       </target>
     </targets>
