--- a/src/SFA.Apprenticeships.Web.Manage/Web.Sit.config
+++ b/src/SFA.Apprenticeships.Web.Manage/Web.Sit.config
@@ -23,6 +23,10 @@
     <httpErrors errorMode="Custom" xdt:Transform="SetAttributes(errorMode)"></httpErrors>
   </system.webServer>
 
+  <system.web>
+    <compilation xdt:Transform="RemoveAttributes(debug)" />
+  </system.web>
+
   <nlog xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform" xmlns="http://www.nlog-project.org/schemas/NLog.xsd">
     <variable name="environment" value="SIT" xdt:Transform="SetAttributes(value)" xdt:Locator="Match(name)"/>
     <targets xdt:Transform="Replace">
