Correct accidental reversion of Shoma's security changes

--- a/src/SFA.Apprenticeships.Web.Candidate/Web.config
+++ b/src/SFA.Apprenticeships.Web.Candidate/Web.config
@@ -174,10 +174,11 @@
         <remove name="X-Powered-By" />
         <remove name="X-AspNetMvc-Version" />
         <add name="Cache-Control" value="public" />
-        <!--Securing against "Click Jacking" http://stackoverflow.com/questions/20047086/securing-my-asp-net-mvc3-website-aganist-click-jacking-->
-        <add name="x-frame-options" value="SAMEORIGIN" />
         <!--HSTS header for GDS https://www.gov.uk/service-manual/operations/operating-servicegovuk-subdomains#transport-layer-security-->
         <add name="Strict-Transport-Security" value="max-age=31536000;includeSubDomains;preload" />
+        <add name="X-Frame-Options" value="DENY"/>
+        <add name="X-XSS-Protection" value="1; mode=block"/>
+        <add name="X-Content-Type-Options" value="nosniff "/>
       </customHeaders>
     </httpProtocol>
 
