Web.Candidate: disable debug on all environments other than local

--- a/src/SFA.Apprenticeships.Web.Candidate/Web.Sit.config
+++ b/src/SFA.Apprenticeships.Web.Candidate/Web.Sit.config
@@ -10,6 +10,7 @@
     <authentication>
       <forms xdt:Transform="SetAttributes" timeout="15" />
     </authentication>
+    <compilation xdt:Transform="RemoveAttributes(debug)" />
   </system.web>
 
   <system.webServer>
