--- a/src/SFA.Apprenticeships.Web.Candidate/Web.Dev.config
+++ b/src/SFA.Apprenticeships.Web.Candidate/Web.Dev.config
@@ -7,6 +7,7 @@
 
   <system.web>
     <httpCookies requireSSL="true" xdt:Transform="SetAttributes" />
+    <compilation xdt:Transform="RemoveAttributes(debug)" />
   </system.web>
 
   <system.webServer>
