--- a/tools/ApprenticeshipScraper/ApprenticeshipScraper.Console/ApprenticeshipScraper.Console.csproj
+++ b/tools/ApprenticeshipScraper/ApprenticeshipScraper.Console/ApprenticeshipScraper.Console.csproj
@@ -42,6 +42,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -63,6 +64,8 @@
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Extensions\StopwatchExtensions.cs" />
     <Compile Include="Extensions\ObjectExtensions.cs" />
+    <Compile Include="Settings\GlobalSettings.cs" />
+    <Compile Include="Settings\IGlobalSettings.cs" />
     <Compile Include="Steps\ApprenticeshipDetailsScraperSingle.cs" />
     <Compile Include="Steps\TraineeDetailsScraper.cs" />
     <Compile Include="Steps\TraineeDetailsScraperSingle.cs" />
