FAA Scraper - adding retries and error logging

--- a/tools/ApprenticeshipScraper/ApprenticeshipScraper.Console/packages.config
+++ b/tools/ApprenticeshipScraper/ApprenticeshipScraper.Console/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="CsQuery" version="1.3.4" targetFramework="net452" />
   <package id="FluentCommandLineParser" version="1.4.3" targetFramework="net452" />
+  <package id="Polly" version="4.2.3" targetFramework="net452" />
   <package id="TinyIoC" version="1.3" targetFramework="net452" developmentDependency="true" />
 </packages>
