--- a/tools/ApprenticeshipScraper/ApprenticeshipScraper.Console/ApprenticeshipScraper.Console.csproj
+++ b/tools/ApprenticeshipScraper/ApprenticeshipScraper.Console/ApprenticeshipScraper.Console.csproj
@@ -41,6 +41,10 @@
       <HintPath>..\packages\FluentCommandLineParser.1.4.3\lib\net35\FluentCommandLineParser.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Polly, Version=4.2.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Polly.4.2.3\lib\net45\Polly.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
@@ -52,6 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions\ExceptionExtensions.cs" />
     <Compile Include="IoC.cs" />
     <Compile Include="Services\AssemblyInfo.cs" />
     <Compile Include="Services\Application.cs" />
@@ -64,6 +69,10 @@
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Extensions\StopwatchExtensions.cs" />
     <Compile Include="Extensions\ObjectExtensions.cs" />
+    <Compile Include="Services\IRetryWebRequests.cs" />
+    <Compile Include="Services\Logger\IThreadSafeStepLogger.cs" />
+    <Compile Include="Services\Logger\ThreadSafeStepLogger.cs" />
+    <Compile Include="Services\WebRequestRetryService.cs" />
     <Compile Include="Settings\GlobalSettings.cs" />
     <Compile Include="Settings\IGlobalSettings.cs" />
     <Compile Include="Steps\ApprenticeshipDetailsScraperSingle.cs" />
@@ -79,8 +88,8 @@
     <Compile Include="Models\SiteEnum.cs" />
     <Compile Include="Services\TimedStep.cs" />
     <Compile Include="Services\UrlResolver.cs" />
-    <Compile Include="Services\IStepLogger.cs" />
-    <Compile Include="Services\TimedStepLogger.cs" />
+    <Compile Include="Services\Logger\IStepLogger.cs" />
+    <Compile Include="Services\Logger\TimedStepLogger.cs" />
     <Compile Include="TinyIoC.cs" />
     <Compile Include="Steps\TraineeResultsScraper.cs" />
   </ItemGroup>
