Not fully tested - rewrite URLs in content so that e.g. WSDL references are correct
Remove some redundant code

--- a/src/SFA.WebProxy/Web.config
+++ b/src/SFA.WebProxy/Web.config
@@ -36,6 +36,7 @@
         <add name="Arr-Disable-Session-Affinity" value="true"/>
       </customHeaders>
     </httpProtocol>
+    <urlCompression doStaticCompression="true" doDynamicCompression="false" />
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
