Moving ServicesConfiguration from the infrastructure to the Application layer to avoid breaking the onion

--- a/src/SFA.Apprenticeships.Infrastructure.Raa/SFA.Apprenticeships.Infrastructure.Raa.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Raa/SFA.Apprenticeships.Infrastructure.Raa.csproj
@@ -113,6 +113,10 @@
       <Project>{f5f29922-2fbc-4bf4-9cbb-424a71fd98c1}</Project>
       <Name>SFA.Apprenticeships.Application.Applications</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SFA.Apprenticeships.Application.Candidate\SFA.Apprenticeships.Application.Candidate.csproj">
+      <Project>{984F8CD2-61B3-48A4-B0CC-5D05E235983D}</Project>
+      <Name>SFA.Apprenticeships.Application.Candidate</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SFA.Apprenticeships.Application.Interfaces\SFA.Apprenticeships.Application.Interfaces.csproj">
       <Project>{2C577447-2405-46B3-8065-613A19A58541}</Project>
       <Name>SFA.Apprenticeships.Application.Interfaces</Name>
