--- a/src/SFA.Apprenticeships.Application.Candidate/SFA.Apprenticeships.Application.Candidate.csproj
+++ b/src/SFA.Apprenticeships.Application.Candidate/SFA.Apprenticeships.Application.Candidate.csproj
@@ -98,6 +98,7 @@
     <Compile Include="CandidateSearchService.cs" />
     <Compile Include="CandidateService.cs" />
     <Compile Include="CreateCandidateRequest.cs" />
+    <Compile Include="Configuration\ServicesConfiguration.cs" />
     <Compile Include="Strategies\GetCandidateVacancyDetailStrategy.cs" />
     <Compile Include="SaveCandidateRequest.cs" />
     <Compile Include="Strategies\Apprenticeships\GetCandidateApprenticeshipApplicationsStrategy.cs" />
@@ -203,10 +204,6 @@
     <ProjectReference Include="..\SFA.Apprenticeships.Domain.Interfaces\SFA.Apprenticeships.Domain.Interfaces.csproj">
       <Project>{91db99c3-50a9-4ded-ab90-2ff94d0b130e}</Project>
       <Name>SFA.Apprenticeships.Domain.Interfaces</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Common\SFA.Apprenticeships.Infrastructure.Common.csproj">
-      <Project>{78B1F2A1-DCC3-4ED3-8CE0-16E0781B59FA}</Project>
-      <Name>SFA.Apprenticeships.Infrastructure.Common</Name>
     </ProjectReference>
     <ProjectReference Include="..\SFA.Infrastructure\SFA.Infrastructure.csproj">
       <Project>{1f500137-c8e9-49aa-886e-1922d9d870eb}</Project>
