Ignore town and county when saving/loading from Mongo

--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Mongo/SFA.Apprenticeships.Infrastructure.Repositories.Mongo.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Mongo/SFA.Apprenticeships.Infrastructure.Repositories.Mongo.csproj
@@ -135,6 +135,7 @@
     <Compile Include="Common\Configuration\MongoConfiguration.cs" />
     <Compile Include="Common\GenericMongoClient.cs" />
     <Compile Include="Common\GenericMongoClient2.cs" />
+    <Compile Include="Common\GlobalBsonClassMaps.cs" />
     <Compile Include="Common\IMongoAdminClient.cs" />
     <Compile Include="Common\MongoAdminClient.cs" />
     <Compile Include="Communication\ApplicationStatusAlertRepository.cs" />
