US1464: set ProviderId claim in addition to UKPRN.

--- a/src/SFA.Apprenticeships.Web.Raa.Common.UnitTests/SFA.Apprenticeships.Web.Raa.Common.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Web.Raa.Common.UnitTests/SFA.Apprenticeships.Web.Raa.Common.UnitTests.csproj
@@ -164,6 +164,7 @@
     <Compile Include="Providers\LocationsProvider\LocationsTests.cs" />
     <Compile Include="Providers\LocationsProvider\TestBase.cs" />
     <Compile Include="Providers\ProviderProvider\CreateVacancyTests.cs" />
+    <Compile Include="Providers\ProviderProvider\GetTests.cs" />
     <Compile Include="Providers\ProviderProvider\TestBase.cs" />
     <Compile Include="Providers\ProviderUser\ProviderUserProviderBuilder.cs" />
     <Compile Include="Providers\ProviderUser\ProviderUserProviderTests.cs" />
