--- a/src/SFA.Apprenticeships.Application.Provider/SFA.Apprenticeships.Application.Provider.csproj
+++ b/src/SFA.Apprenticeships.Application.Provider/SFA.Apprenticeships.Application.Provider.csproj
@@ -93,6 +93,7 @@
     <Compile Include="..\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="ProviderVacancyAuthorisationService.cs" />
     <Compile Include="ProviderService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
