--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Mongo/SFA.Apprenticeships.Infrastructure.Repositories.Mongo.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Mongo/SFA.Apprenticeships.Infrastructure.Repositories.Mongo.csproj
@@ -112,6 +112,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SharedAssemblyInfo.cs">
+      <Link>Properties\SharedAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Applications\ApprenticeshipApplicationRepository.cs" />
     <Compile Include="Applications\Entities\MongoApprenticeshipApplicationDetail.cs" />
     <Compile Include="Applications\Entities\MongoTraineeshipApplicationDetail.cs" />
