--- a/src/SFA.Apprenticeships.Infrastructure.EmployerDataService/SFA.Apprenticeships.Infrastructure.EmployerDataService.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.EmployerDataService/SFA.Apprenticeships.Infrastructure.EmployerDataService.csproj
@@ -97,6 +97,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+        <Compile Include="..\SharedAssemblyInfo.cs">
+      <Link>Properties\SharedAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="ErrorCodes.cs" />
     <Compile Include="IoC\EmployerDataServicesRegistry.cs" />
     <Compile Include="Mappers\BsAddressMapper.cs" />
