--- a/src/SFA.Apprenticeships.Infrastructure.LogEventIndexer/SFA.Apprenticeships.Infrastructure.LogEventIndexer.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.LogEventIndexer/SFA.Apprenticeships.Infrastructure.LogEventIndexer.csproj
@@ -145,6 +145,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+        <Compile Include="..\SharedAssemblyInfo.cs">
+      <Link>Properties\SharedAssemblyInfo.cs</Link>
+    </Compile>    
     <Compile Include="Configuration\AzureEventHubLogIndexerConfiguration.cs" />
     <Compile Include="Domain\LogEvent.cs" />
     <Compile Include="Processors\LogEventProcessor.cs" />
