--- a/src/SFA.Apprenticeships.Infrastructure.Migrate/SFA.Apprenticeships.Infrastructure.Migrate.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Migrate/SFA.Apprenticeships.Infrastructure.Migrate.csproj
@@ -93,6 +93,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+        <Compile Include="..\SharedAssemblyInfo.cs">
+      <Link>Properties\SharedAssemblyInfo.cs</Link>
+    </Compile>    
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WorkerRole.cs" />
   </ItemGroup>
