--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Mongo.Tests/SFA.Apprenticeships.Infrastructure.Repositories.Mongo.Tests.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Mongo.Tests/SFA.Apprenticeships.Infrastructure.Repositories.Mongo.Tests.csproj
@@ -128,6 +128,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+        <Compile Include="..\SharedAssemblyInfo.cs">
+      <Link>Properties\SharedAssemblyInfo.cs</Link>
+    </Compile>   
     <Compile Include="Applications\ApprenticeshipApplicationReadRepositoryTests.cs" />
     <Compile Include="Applications\ApprenticeshipApplicationWriteRepositoryTests.cs" />
     <Compile Include="Applications\TraineeshipApplicationReadRepositoryTests.cs" />
