--- a/src/SFA.Apprenticeships.Infrastructure.WebServices/SFA.Apprenticeships.Infrastructure.WebServices.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.WebServices/SFA.Apprenticeships.Infrastructure.WebServices.csproj
@@ -86,6 +86,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+        <Compile Include="..\SharedAssemblyInfo.cs">
+      <Link>Properties\SharedAssemblyInfo.cs</Link>
+    </Compile>  
     <Compile Include="ErrorCodes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Wcf\IWcfService.cs" />
