--- a/src/SFA.Infrastructure/SFA.Infrastructure.csproj
+++ b/src/SFA.Infrastructure/SFA.Infrastructure.csproj
@@ -90,6 +90,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+        <Compile Include="..\SharedAssemblyInfo.cs">
+      <Link>Properties\SharedAssemblyInfo.cs</Link>
+    </Compile>   
     <Compile Include="Configuration\ConfigurationManager.cs" />
     <Compile Include="Interfaces\Caching\BaseCacheKey.cs" />
     <Compile Include="Interfaces\Caching\CacheDuration.cs" />
