--- a/src/SFA.Apprenticeships.Web.Common/SFA.Apprenticeships.Web.Common.csproj
+++ b/src/SFA.Apprenticeships.Web.Common/SFA.Apprenticeships.Web.Common.csproj
@@ -205,10 +205,13 @@
     <Compile Include="Attributes\SessionTimeoutAttribute.cs" />
     <Compile Include="BundleConfig.cs" />
     <Compile Include="Configuration\ReportServerConfiguration.cs" />
+    <Compile Include="Configuration\WebApiConfig.cs" />
     <Compile Include="Constants\CacheProfiles.cs" />
     <Compile Include="Constants\ClaimTypes.cs" />
     <Compile Include="Constants\ViewModels\AddressViewModelMessages.cs" />
     <Compile Include="Constants\ViewModels\DateViewModelMessages.cs" />
+    <Compile Include="Controllers\VersionController.cs" />
+    <Compile Include="ViewModels\VersionViewModel.cs" />
     <Compile Include="Converters\PageableConverters.cs" />
     <Compile Include="Extensions\ClaimsPrincipalExtensions.cs" />
     <Compile Include="Extensions\ListItemExtensions.cs" />
