Optimised SQL part of GetVacanciesSummaryForProvider
SQL part now takes a nominal amount of time, Mongo part is the bottleneck
Not fully tested and some features not yet implemented - work in progress

--- a/src/SFA.Apprenticeships.Domain.Entities.Raa/SFA.Apprenticeships.Domain.Entities.Raa.csproj
+++ b/src/SFA.Apprenticeships.Domain.Entities.Raa/SFA.Apprenticeships.Domain.Entities.Raa.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Users\ProviderUser.cs" />
     <Compile Include="Users\ProviderUserStatus.cs" />
     <Compile Include="Users\Role.cs" />
+    <Compile Include="Vacancies\IVacancyIdStatusAndClosingDate.cs" />
     <Compile Include="Vacancies\ApprenticeshipLevel.cs" />
     <Compile Include="Vacancies\Duration.cs" />
     <Compile Include="Vacancies\DurationType.cs" />
