Added html validation tests to questions.

--- a/src/SFA.Apprenticeships.Web.Recruit.UnitTests/SFA.Apprenticeships.Web.Recruit.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Web.Recruit.UnitTests/SFA.Apprenticeships.Web.Recruit.UnitTests.csproj
@@ -180,6 +180,7 @@
     <Compile Include="Validators\Providers\ProviderSiteEmployerLinkViewModelValidatorTests.cs" />
     <Compile Include="Validators\Providers\ProviderSiteSearchViewModelValidatorTests.cs" />
     <Compile Include="Validators\ProviderUser\ProviderUserViewModelValidatorTests.cs" />
+    <Compile Include="Validators\Samples.cs" />
     <Compile Include="Validators\VacancyPosting\VacancyDatesViewModelServerValidatorTests.cs" />
     <Compile Include="Validators\ValidFreeTextTest.cs" />
     <Compile Include="Views\Shared\ChildViewModel.cs" />
