--- a/src/SFA.Apprenticeships.Web.Raa.Common.UnitTests/SFA.Apprenticeships.Web.Raa.Common.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Web.Raa.Common.UnitTests/SFA.Apprenticeships.Web.Raa.Common.UnitTests.csproj
@@ -192,6 +192,7 @@
     <Compile Include="Providers\VacancyProvider\VacancyProviderBuilder.cs" />
     <Compile Include="Providers\VacancyProvider\VacancyProviderTestHelper.cs" />
     <Compile Include="Providers\VacancyProvider\VacancyProviderTests.cs" />
+    <Compile Include="Validators\Samples.cs" />
     <Compile Include="Validators\VacancyPosting\NewVacancyViewModelClientValidatorTests.cs" />
     <Compile Include="Validators\VacancyPosting\NewVacancyViewModelServerValidatorTests.cs" />
     <Compile Include="Validators\VacancyPosting\TrainingDetailsViewModelServerValidatorTests.cs" />
